<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebackground"
    tools:context=".Home">

    <Button
        android:id="@+id/startButton"
        android:layout_width="147dp"
        android:layout_height="68dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/start"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/title"
        android:textFontWeight=""
        android:textColor="@color/colorText"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginLeft="180dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:padding="10dp"
        android:text="@string/version"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fadingText"
        android:layout_width="317dp"
        android:layout_height="52dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:texts="@array/text"
        app:timeout="500" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fading_text2"
        android:layout_width="267dp"
        android:layout_height="51dp"
        android:layout_marginTop="592dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:texts="@array/text2"
        app:timeout="600" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fading_text3"
        android:layout_width="401dp"
        android:layout_height="95dp"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:texts="@array/text3"
        app:timeout="400" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/fading_text4"
        android:layout_width="190dp"
        android:layout_height="65dp"
        android:layout_marginTop="468dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:texts="@array/text4"
        app:timeout="300" />

</android.support.constraint.ConstraintLayout>